Made all code compile and test with JDK 21