@@ -25,6 +25,7 @@
 					<source>${maven.compiler.release}</source>
 					<target>${maven.compiler.release}</target>
 					<compilerArgs>
+						<arg>--enable-preview</arg>
 						<arg>
 							--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
 						<arg>
@@ -44,6 +45,7 @@
 				<version>3.2.5</version>
 				<configuration>
 					<argLine>
+						--enable-preview
 						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
